[gd_scene load_steps=2 format=2]

[ext_resource path="res://Example/BasicExample.gd" type="Script" id=1]

[node name="BasicExample" type="Node2D"]
script = ExtResource( 1 )

[node name="DialogLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Panel" parent="DialogLayer"]
anchor_top = 0.661667
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DialogLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="DialogLayer/Control/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="RichTextLabel" parent="DialogLayer/Control/VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="DialogLayer/Control/VBoxContainer"]
margin_top = 182.0
margin_right = 1024.0
margin_bottom = 202.0
alignment = 2

[node name="Button2" type="Button" parent="DialogLayer/Control/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 901.0
margin_right = 979.0
margin_bottom = 20.0
text = "start again"

[node name="Button" type="Button" parent="DialogLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 983.0
margin_right = 1024.0
margin_bottom = 20.0
text = "start"
[connection signal="pressed" from="DialogLayer/Control/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="DialogLayer/Control/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
